2011-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* Merge the Rabbit2000 branch.

2011-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/z80/z180.h,
	  device/include/z80/types.h,
	  device/include/z80/README,
	  device/include/z80/z180.h:
	  Move z180 include file.

2011-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Cleanup z180 library handling.

2011-10-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: add Z180 lib and include files to package

2011-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Use r2k-specific ld n (sp), hl,  ld n (sp), iy, ld n (ix), ld iy, n (sp), ld hl, n (sp) and ld hl, n (ix).

2011-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def:
	  Preparations for use of r2k-specific ld hl, n (sp) and ld hl, n (ix).

2011-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Preparations for use of r2k-specific ld iy,hl.

2011-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def:
	  Allow use of r2k-specific ld hl, (hl) instruction.

2011-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Make better use of the r2k-specific add sp, d instruction.

2011-10-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  More flexible use of r2k-specific and hl, de instruction.

2011-10-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Allow use of r2k-specific instructions in right shift.
	* sim/ucsim/z80.src/inst.cc:
	  Fix flag handling in z80/z180/r2k rrca instruction.
	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix handling of carry bit in r2k 16-bit rr and rl instructions.

2011-10-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def: